# rotate_stl_with_aimtool

./: .gitignore  README.md  pyproject.toml
rotate_stl_with_aimtool/: __init__.py  aimtool_reader.py  main.py
test_data/: BONE-1.stl  BONE-2.aimtool
